@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Product" {
    entity Product
    class TechnicalDescription
    class BrandName
}

package "<<aggregate>> Category" {
    entity Category
}

entity Product <<entity>> <<root>> {
    -<<VO>> UniqueInternalCode
    -<<VO>> Barcode
    -<<VO>> ShortDescription
    -<<VO>> ExtendedDescription
    -<<VO>> PriceWithoutTaxes
    -<<VO>> Status /'Available, Temporarily Unavailable, Unavailable'/
    -<<VO>> Weight
    -<<VO>> Volume
    -<<VO>> Tax
}

class TechnicalDescription <<(V,#FF8B40) value object>>
class BrandName <<(V,#FF8B40) value object>>

entity Category <<entity>> <<root>> {
    -<<VO>> AlphanumericCode
    -<<VO>> Description
}

Product ----> "1" Category : belongs to
Product -> "0..1" TechnicalDescription
Product --> "0..1" BrandName

@enduml